Fixed title sponsor alignment.

--- a/style.css
+++ b/style.css
@@ -251,7 +251,7 @@ div.supporter-enclosure figure img{
 
 .supporter-item.title img {
     height: auto;
-    max-width: 260px;
+    max-width: 290px;
     max-height: 260px;
 }
 
